<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/dl_ditu2"
    android:gravity="center_horizontal"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_login_logo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@mipmap/dl_logo" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/px_10"
        android:paddingLeft="@dimen/px_100"
        android:paddingRight="@dimen/px_100"
        android:paddingTop="@dimen/px_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/dl_self2x" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_20"
            android:background="@null"
            android:hint="@string/hint_login_phone"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_30" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_2"
        android:layout_marginLeft="@dimen/px_100"
        android:layout_marginRight="@dimen/px_100"
        android:background="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_20"
        android:gravity="center"
        android:orientation="horizontal"
        android:paddingBottom="@dimen/px_10"
        android:paddingLeft="@dimen/px_100"
        android:paddingRight="@dimen/px_100"
        android:paddingTop="@dimen/px_10">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@mipmap/dl_password2x" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/px_20"
            android:background="@null"
            android:hint="@string/hint_login_pwd"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_30" />
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="@dimen/px_2"
        android:layout_marginLeft="@dimen/px_100"
        android:layout_marginRight="@dimen/px_100"
        android:background="@android:color/white" />

    <Button
        android:id="@+id/submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_100"
        android:layout_marginRight="@dimen/px_100"
        android:layout_marginTop="@dimen/px_90"
        android:background="@drawable/button_background"
        android:gravity="center"
        android:text="@string/hint_login_submit"
        android:textColor="@color/colorAccent"
        android:textSize="@dimen/px_40" />

    <TextView
        android:id="@+id/tv_look"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/px_25"
        android:text="@string/hint_login_look"
        android:textColor="@android:color/white"
        android:textSize="@dimen/px_25" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_100"
        android:layout_marginRight="@dimen/px_100">

        <TextView
            android:id="@+id/to_forget_pwd"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/px_20"
            android:text="@string/title_forget_pwd"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_30" />

        <TextView
            android:id="@+id/to_reg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_gravity="center_vertical"
            android:padding="@dimen/px_20"
            android:text="@string/title_register"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_30" />

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_100"
        android:layout_marginRight="@dimen/px_100">

        <TextView
            android:id="@+id/tag"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:layout_marginLeft="@dimen/px_40"
            android:layout_marginRight="@dimen/px_40"
            android:layout_marginTop="@dimen/px_25"
            android:text="@string/hint_login_third"
            android:textColor="@android:color/white"
            android:textSize="@dimen/px_25" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_centerVertical="true"
            android:layout_toLeftOf="@id/tag"
            android:background="@android:color/white" />

        <View
            android:layout_width="match_parent"
            android:layout_height="@dimen/px_2"
            android:layout_centerVertical="true"
            android:layout_toRightOf="@id/tag"
            android:background="@android:color/white" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="@dimen/px_200"
        android:layout_marginRight="@dimen/px_200"
        android:layout_marginTop="@dimen/px_20"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_qq"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/dl_qq2x" />

        <ImageView
            android:id="@+id/iv_weixin"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:src="@mipmap/dl_wechat2x" />

    </LinearLayout>

</LinearLayout>