<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:scrollbars="none">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <com.qxb.student.common.view.web.WebView
            android:id="@+id/webView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <include layout="@layout/view_list" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/px_100"
            android:background="@color/colorDivider"
            android:padding="@dimen/px_20">

            <TextView
                android:id="@+id/send"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:background="@drawable/shape_darker_gray_10"
                android:gravity="center"
                android:paddingBottom="@dimen/px_20"
                android:paddingEnd="@dimen/px_30"
                android:paddingStart="@dimen/px_30"
                android:paddingTop="@dimen/px_20"
                android:text="@string/hint_send"
                android:textColor="@android:color/white"
                android:textSize="@dimen/px_35" />

            <ImageView
                android:id="@+id/collect"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_margin="@dimen/px_20"
                android:layout_toStartOf="@id/send"
                android:contentDescription="@string/hint_not_describe" />

            <EditText
                android:id="@+id/edit1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_marginEnd="@dimen/px_10"
                android:layout_toStartOf="@id/collect"
                android:background="@drawable/stroke_gray_20"
                android:hint="@string/hint_bankao_edit"
                android:inputType="text"
                android:maxLength="200"
                android:paddingBottom="@dimen/px_20"
                android:paddingEnd="@dimen/px_20"
                android:paddingStart="@dimen/px_20"
                android:paddingTop="@dimen/px_20"
                android:textColor="@android:color/white"
                android:textColorHint="@android:color/darker_gray"
                android:textSize="@dimen/px_40" />

        </RelativeLayout>

    </LinearLayout>
</android.support.v4.widget.NestedScrollView>