<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <data>

        <variable
            name="school"
            type="com.qxb.student.common.module.bean.School" />
    </data>

    <android.support.design.widget.CoordinatorLayout
        android:id="@+id/coordinator_Layout"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/app_bar_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/white">

            <android.support.design.widget.CollapsingToolbarLayout
                android:id="@+id/collapsingToolbarLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:collapsedTitleTextAppearance="@style/collapsedTitleText"
                app:contentScrim="#fff2f2f2"
                app:expandedTitleTextAppearance="@style/expandedTitleText"
                app:layout_scrollFlags="scroll|exitUntilCollapsed"
                app:title="">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    app:layout_collapseMode="pin"
                    app:layout_collapseParallaxMultiplier="0.7">

                    <include layout="@layout/header_school" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="@dimen/px_2"
                        android:background="@color/colorDivider" />

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="@dimen/px_20"
                                android:drawableStart="@mipmap/sch_detail_consult"
                                android:paddingBottom="@dimen/px_20"
                                android:paddingTop="@dimen/px_20"
                                android:text="聊天" />
                        </FrameLayout>

                        <FrameLayout
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="@dimen/px_20"
                                android:drawableStart="@mipmap/sch_detail_consult"
                                android:paddingBottom="@dimen/px_20"
                                android:paddingTop="@dimen/px_20"
                                android:text="聊天" />
                        </FrameLayout>

                        <FrameLayout
                            android:id="@+id/layout1"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/px_20"
                            android:paddingTop="@dimen/px_20">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="@dimen/px_30"
                                android:drawableStart="@mipmap/sch_detail_consult"
                                android:text="@string/hint_consultation" />
                        </FrameLayout>

                        <RelativeLayout
                            android:id="@+id/layout2"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1">

                            <TextView
                                android:id="@+id/tag"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:drawableStart="@mipmap/sch_detail_baoming"
                                android:gravity="center"
                                android:paddingBottom="@dimen/px_20"
                                android:paddingTop="@dimen/px_20"
                                android:text="@string/hint_sign_up" />

                            <ImageView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_toEndOf="@id/tag"
                                android:src="@mipmap/fire" />

                        </RelativeLayout>

                        <FrameLayout
                            android:id="@+id/layout3"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_weight="1"
                            android:paddingBottom="@dimen/px_20"
                            android:paddingTop="@dimen/px_20">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_gravity="center"
                                android:drawablePadding="@dimen/px_30"
                                android:drawableStart="@mipmap/sch_detail_consult"
                                android:text="@string/hint_concern" />
                        </FrameLayout>
                    </LinearLayout>

                </LinearLayout>

                <include layout="@layout/view_toolbar" />
            </android.support.design.widget.CollapsingToolbarLayout>


        </android.support.design.widget.AppBarLayout>

        <android.support.v4.view.ViewPager
            android:id="@+id/viewPager"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none"
            app:layout_behavior="@string/appbar_scrolling_view_behavior" />

    </android.support.design.widget.CoordinatorLayout>
</layout>